# dataclass-settings

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: pyproject.toml
docs/source/: annotations.md  api.md  class_compatibility.md  conf.py  index.md  loaders.md
src/dataclass_settings/: __init__.py  base.py  class_inspect.py  context.py  loader.py  loaders.py
src/dataclass_settings/loaders/: __init__.py  env.py  secret.py  toml.py
tests/: test_312_annotatations.py  test_class_inspect.py  test_classvar.py  test_fallback.py  test_forward_ref.py  utils.py
tests/class_types/: test_attrs.py  test_dataclass.py  test_msgspec.py  test_pydantic.py  test_pydantic_dataclass.py
tests/loaders/: test_load_env.py  test_secret.py  test_toml.py
