[tool.poetry]
name = "dataclass-settings"
version = "0.4.0"
description = "Declarative dataclass settings."

repository = "https://github.com/dancardin/dataclass-settings"
authors = ["DanCardin <ddcardin@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = [
  "dataclass",
  "attrs",
  "pydantic",
  "msgspec",
  "env",
  "settings",
]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [{include = "dataclass_settings", from = "src"}]
include = [
    "*.md",
    "py.typed",
]

[tool.poetry.dependencies]
python = ">=3.8,<4"

typing-extensions = ">=4.7.1"
typing-inspect = "*"

[tool.poetry.group.dev.dependencies]
attrs = "*"
black = "^23.7.0"
coverage = "^7.3.0"
mypy = ">=1.0"
pydantic = "*"
msgspec = "*"
pytest = "^7.4.0"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"

select = ["C", "D", "E", "F", "I", "N", "Q", "RET", "RUF", "S", "T", "UP", "YTT"]
ignore = [
    "C901",
    "E501",
    "S101",
    "D1",
    "D203",
    "D213",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["T201"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "assert_never",
]

[tool.coverage.run]
branch = true
parallel = true
include = ["src/*"]

[tool.mypy]
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
incremental = true
check_untyped_defs = true

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"
addopts = "--doctest-modules -vv --ff --strict-markers"
norecursedirs = ".* build dist *.egg bin"
markers = [
  "help",
]
