[project]
name = "docs"
version = "0.1.0"
description = ""
authors = [{ name = "Dan Cardin", email = "ddcardin@gmail.com" }]

requires-python = ">=3.10"

dependencies = [
  "astroid >= 3",
  "furo >= 2024.04.27",
  "linkify-it-py",
  "myst-parser[linkify] >= 4.0.1",
  "sphinx >= 7.4.0",
  "sphinx-autoapi >= 3.6.0",
  "sphinx-autobuild >= 2021.3.14",
  "sphinx-autodoc-typehints >= 1.18.1",
  "sphinx-copybutton",
  "sphinx-pyproject >= 0.3.0",
]

[tool.uv]
dev-dependencies = [
  "sphinx-autobuild",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
